--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -6,8 +6,12 @@
 </head>
 <body>
     <div align="center">
-        <h1>Welcome to the Number Game</h1>
-        <a th:href="play" th:text="Play">Click to Play</a>
+        <h1>Welcome to Guess the Number Game</h1>
+        <a th:with="PLAY=${T(academy.learnprogramming.util.GameMappings).PLAY}"
+           th:href="@{__${PLAY}__}"
+           th:text="Play">
+            Click to Play
+        </a>
     </div>
 </body>
 </html>
