--- a/web/src/main/resources/templates/game-over.html
+++ b/web/src/main/resources/templates/game-over.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{fragments/head :: headFragment}">
     <meta charset="UTF-8">
-    <title>Guess the Number Game</title>
+    <title>Game Finished</title>
 </head>
 <body>
     <div align="center">
@@ -31,8 +31,8 @@
         </h3>
 
 
-        <footer>
-            <p>Create by Ad learn</p>
+        <footer th:replace="~{fragments/footer :: footerFragment}">
+            <p>Over footer</p>
         </footer>
     </div>
 </body>
