--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{fragments/head :: headFragment}">
     <meta charset="UTF-8">
-    <title>Guess the Number Game</title>
+    <title>Title content</title>
 </head>
 <body>
     <div align="center">
         <h1>Welcome to Guess the Number Game</h1>
         <a th:with="PLAY=${T(academy.learnprogramming.util.GameMappings).PLAY}"
            th:href="@{__${PLAY}__}"
-           th:text="Play">
+           th:text="Play"
+            href="play.html">
             Click to Play
         </a>
+
+
+        <footer th:replace="~{fragments/footer :: footerFragment}" />
     </div>
 </body>
 </html>
