--- a/web/src/main/resources/templates/play.html
+++ b/web/src/main/resources/templates/play.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
+<head th:replace="~{fragments/head :: headFragment}">
     <meta charset="UTF-8">
-    <title>Guess the Number Game</title>
+    <title>Guess</title>
 </head>
 <body>
     <div align="center">
@@ -25,8 +25,8 @@
             <input type="submit" value="Submit">
         </form>
 
-        <footer>
-            <p>Create by Ad learn</p>
+        <footer th:replace="~{fragments/footer :: footerFragment}">
+            <p>Play footer</p>
         </footer>
     </div>
 </body>
