--- a/web/src/main/resources/templates/home.html
+++ b/web/src/main/resources/templates/home.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head :: headFragment}">
+<html lang="en">
+<head id="headId">
     <meta charset="UTF-8">
     <title>Title content</title>
 </head>
 <body>
     <div align="center">
         <h1>Welcome to Guess the Number Game</h1>
-        <a th:with="PLAY=${T(academy.learnprogramming.util.GameMappings).PLAY}"
-           th:href="@{__${PLAY}__}"
-           th:text="Play"
+        <a id="playId"
             href="play.html">
             Click to Play
         </a>
 
-
-        <footer th:replace="~{fragments/footer :: footerFragment}" />
+        <footer id="footerId"/>
     </div>
 </body>
 </html>
