--- a/web/src/main/resources/templates/play.html
+++ b/web/src/main/resources/templates/play.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head th:replace="~{fragments/head :: headFragment}">
+<html lang="en">
+<head id="headId">
     <meta charset="UTF-8">
     <title>Guess</title>
 </head>
 <body>
     <div align="center">
         <h1>Guess the Number Game</h1>
-        <h3 th:with="MAIN_MESSAGE=${T(academy.learnprogramming.util.AttributeNames).MAIN_MESSAGE}"
-            th:text="${__${MAIN_MESSAGE}__}">
+        <h3 id="main-message">
             Main Message Content
         </h3>
-        <h3 th:with="RESULT_MESSAGE=${T(academy.learnprogramming.util.AttributeNames).RESULT_MESSAGE}"
-            th:text="${__${RESULT_MESSAGE}__}">
+        <h3 id="result-message">
             Result Message Content
         </h3>
 
-        <form th:with="PLAY=${T(academy.learnprogramming.util.GameMappings).PLAY}"
-                th:action="@{__${PLAY}__}"
+        <form id="game-form"
               action="play"
               method="post">
             <label for="guess">Enter your guess</label>
@@ -25,7 +22,7 @@
             <input type="submit" value="Submit">
         </form>
 
-        <footer th:replace="~{fragments/footer :: footerFragment}">
+        <footer id="footerId">
             <p>Play footer</p>
         </footer>
     </div>
