Add Thymeleaf Internationalization

--- a/web/src/main/resources/templates/home.th.xml
+++ b/web/src/main/resources/templates/home.th.xml
@@ -1,10 +1,12 @@
 <thlogic>
   <attr sel="#headId"
         th:replace="~{fragments/head :: headFragment}"/>
+  <attr sel="#game-welcome"
+        th:text="#{game.welcome}"/>
   <attr sel="#playId"
         th:with="PLAY=${T(academy.learnprogramming.util.GameMappings).PLAY}"
         th:href="@{__${PLAY}__}"
-        th:text="Play"/>
+        th:text="#{game.play}"/>
   <attr sel="#footerId"
         th:replace="~{fragments/footer :: footerFragment}"/>
 </thlogic>
