--- a/web/src/main/resources/templates/fragments/footer.html
+++ b/web/src/main/resources/templates/fragments/footer.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" >
 <footer id="footerId">
-    <p>Create by Ad learn</p>
+    <p id="created-by">Created by Ad learn</p>
 </footer>
 </html>
