--- a/web/src/main/resources/templates/game-over.html
+++ b/web/src/main/resources/templates/game-over.html
@@ -7,7 +7,7 @@
 <body>
     <div align="center">
         <h1>Guess the Number Game</h1>
-        <h3>Game Over</h3>
+        <h3 id="game-over">Game Over</h3>
 
         <h3>
             <a id="restart">
